# Compasstep-AI

./: .env.example  .gitignore  L1_id_map.json  README.md  config.yml.example  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: issue-template.md
app/: main.py
app/agent/: agent.py  constants.py  prompts.py  utils.py
app/agent/tools/: __init__.py  artist_tracks.py  country_tracks.py  global_tracks.py  guardrails.py  similar_artists.py  similar_tracks.py  tag_tracks.py
app/core/: cache.py  constants.py  logger.py  scheduler.py
app/db/: session.py
app/db/models/: __init__.py  admin.py  ai_model.py  base.py  chat.py  guest_comment.py  lyrics.py  lyrics_analysis.py  post.py  reputation_analysis.py  retraining_data.py  song.py  user.py
app/db/repository/: chat_repository.py  lyrics_repository.py  peer_repository.py  retraining_repo.py  user_repository.py  youtube_reputation_repo.py
app/domains/lyrics/: routers.py  schemas.py  service.py
app/domains/lyrics/coaching/: prompts.py  service.py
app/domains/lyrics/reputation/: service.py
app/domains/peer_reputation/: routers.py  schemas.py  service.py
app/domains/reference/: exceptions.py  routers.py  schemas.py  service.py
app/domains/reputation/: consumer.py  routers.py  schemas.py  service.py
app/ml/retrain/: config.py  dataset.py  evaluator_test_only.py  manager.py  pipeline.py  trainer.py
app/ml/sentiment/: infer.py  keywords.py  stopwords.txt
app/s3/: service.py
data/test/: goe_test_L1L0.csv  kote_test_L1L0.csv
server/: __init__.py  logger.py
tests/: test_session_dual.py
