[project]
name = "compassstep-ai"
version = "0.1.0"
description = "Compasstep"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116.2",
    "google-api-python-client>=2.182.0",
    # LangChain 패밀리
    "langchain==0.3.27",
    "langchain-openai==0.3.33",
    "langchain-community==0.3.27",
    "openai>=1.108.1",
    "psycopg[binary]>=3.2.10",
    "pycountry>=24.6.1",
    "pydantic>=2.11.9",
    "pylast>=5.5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.35.0",
    "konlpy>=0.6.0",
    "nltk>=3.9.2",
    "transformers>=4.57.1",
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
    "asyncpg>=0.30.0",
    "redis>=7.0.1",
    "aioredis>=2.0.1",
    "aio-pika>=9.5.7",
]

[dependency-groups]
dev = []

# --------------------------------------------------------
# ⚙️ OS별 Torch 의존성 분기
# --------------------------------------------------------
[project.optional-dependencies]
torch-cuda = [
    "torch==2.5.1+cu128; sys_platform == 'win32'",
    "torchvision==0.20.1+cu128; sys_platform == 'win32'",
    "torchaudio==2.5.1+cu128; sys_platform == 'win32'"
]
torch = [
    "torch==2.5.1; sys_platform == 'darwin'",
    "torchvision==0.20.1; sys_platform == 'darwin'",
    "torchaudio==2.5.1; sys_platform == 'darwin'"
]

# --------------------------------------------------------
# ⚙️ CUDA wheel repo 지정 (Windows용)
# --------------------------------------------------------
[tool.uv.sources]
torch = { index = "https://download.pytorch.org/whl/cu128", markers = "sys_platform == 'win32'" }
torchvision = { index = "https://download.pytorch.org/whl/cu128", markers = "sys_platform == 'win32'" }
torchaudio = { index = "https://download.pytorch.org/whl/cu128", markers = "sys_platform == 'win32'" }