[project]
name = "compassstep-ai"
version = "0.1.0"
description = "Compasstep"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116.2",
    "google-api-python-client>=2.182.0",
    # LangChain 패밀리
    "langchain==0.3.27",
    "langchain-openai==0.3.33",
    "langchain-community==0.3.27",
    "openai>=1.108.1",
    "psycopg[binary]>=3.2.10",
    "pycountry>=24.6.1",
    "pydantic>=2.11.9",
    "pylast>=5.5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.35.0",
    "konlpy>=0.6.0",
    "nltk>=3.9.2",
    "transformers>=4.57.1",
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
    "asyncpg>=0.30.0",
    "redis>=7.0.1",
    "aioredis>=2.0.1",
    "aio-pika>=9.5.7",
    "peft>=0.17.1",
]

[dependency-groups]
dev = []
